[package]
name = "mayan-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
solana-client = "2.1"
solana-sdk = "2.1"
borsh = { version = "1.0", features = ["derive"] }
hex = "0.4"
colored = "2.0"
bs58 = "0.5"
